Fix image image overflow in restaurant page

--- a/styles/restaurants_page.css
+++ b/styles/restaurants_page.css
@@ -13,7 +13,7 @@ img {
     height: 100%;
     width: 20%;
     overflow: auto;
-    min-width: 150px;
+    min-width: 170px;
   
 }
 
